Fix word wrapping for caution message

--- a/mitosheet/css/elements/MultiToggleBox.css
+++ b/mitosheet/css/elements/MultiToggleBox.css
@@ -43,6 +43,7 @@
     color: var(--mito-status-warning-dark);
     font-size: 11px;
     padding-right: 4px;
+    word-break: break-all;
 }
 
 .multi-toggle-box-row {
